# chip8-emulator

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
roms/: clzz logo.8o  clzz logo.ch8
rsc8_core/: Cargo.toml
rsc8_core/src/: chip8.rs  error.rs  instruction.rs  lib.rs  rng.rs
rsc8_wasm/: Cargo.toml
rsc8_wasm/src/: lib.rs
web/: index.html  index.js  rsc8_wasm.js  rsc8_wasm_bg.wasm
