[package]
name = "rsc8_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
rsc8_core = { path = "../rsc8_core" }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "KeyboardEvent",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Window",
    "CanvasRenderingContext2d",
] }

[lib]
crate-type = ["cdylib"]
